<resources>
    <string name="app_name">The Breeding Lab</string>
    <string name="parent_profiles">Parent Profiles</string>
    <string name="puppy_details">Puppy Details</string>
    <string name="player_statistics">Player Statistics</string>
    <string name="breeding_record">Breeding Record</string>
    <string name="reputation_titles">Reputation Titles</string>
    <string name="view_player_stats">View Player Stats</string>
    <string name="price_menu_amp_sell_puppies"><![CDATA[Price Menu & Sell Puppies]]></string>
    <string name="litter_summary">Litter Summary</string>
    <string name="breed_pair">Breed Pair</string>
    <string name="view_parent_profiles">View Parent Profiles</string>
    <string name="select_father">Select Father</string>
    <string name="select_mother">Select Mother</string>
    <string name="no_puppies_to_summarize">No puppies to summarize.</string>
    <string name="puppy_price_menu">Puppy Price Menu</string>
    <string name="sell">Sell</string>
    <string name="sell_all_puppies">Sell All Puppies</string>
    <string name="name">Name</string>
    <string name="welcome_to_the_breeding_lab">Welcome to The Breeding Lab!</string>
    <string name="first_year">This is your first year as a dog breeder! Let me show you around.\n\nYou\'ll start with two dogs: Daisy and Prince.</string>
    <string name="let_s_go_through_the_basic_controls">Let\'s go through the basic controls…</string>
    <string name="use_spinner">Use the spinners to select parent dogs for breeding.\nView Parent Profiles shows detailed information about the selected dogs.\n\nBreed Pair will attempt to breed the selected dogs.\n\nLitter Summary shows statistics about the current litter.\n\nPrice Menu lets you sell your puppies.</string>
    <string name="basic_controls">Basic Controls</string>
    <string name="breeding_success">Breeding Success</string>
    <string name="first_litter_success">First Litter Success!</string>
    <string name="first_litter_desc">Congratulations on your first litter! One of these puppies will become special.\n\nYou must keep this puppy, which we\'ll name Genesis.</string>
    <string name="advance_season">Advance Season</string>
    <string name="breeding_failed">Breeding Failed</string>
    <string name="season_advanced">Season Advanced</string>
    <string name="puppy_training_on">Puppy Training: ON</string>
    <string name="grooming_on">Grooming: ON</string>
</resources>